Fix card image alignment by replacing object-position with vertical-align

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -32,7 +32,7 @@
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    object-position: bottom;
+    vertical-align: bottom;
 }
 
 .card-work .card-inner {
